--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-MONGO_URI=mongodb+srv://maryamakbargh:S1406M0205@cluster0.swrtvhq.mongodb.net/internship-hub
+# MONGO_URI=mongodb+srv://maryamakbargh:S1406M0205@cluster0.swrtvhq.mongodb.net/internship-hub
+MONGO_URI=mongodb+srv://maryamakbargh:S1406%40M0205@cluster0.swrtvhq.mongodb.net/internship-hub?retryWrites=true&w=majority
+
 PORT=5000
 GENAI_API_KEY=`AIzaSyBsES2__qGyJQj-biG6Onel9Br1AbhlB3w`
