--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-# MONGO_URI=mongodb+srv://maryamakbargh:S1406M0205@cluster0.swrtvhq.mongodb.net/internship-hub
-MONGO_URI=mongodb+srv://maryamakbargh:S1406%40M0205@cluster0.swrtvhq.mongodb.net/internship-hub?retryWrites=true&w=majority
-
+MONGO_URI=mongodb+srv://maryamakbargh:S1406M0205@cluster0.swrtvhq.mongodb.net/internship-hub
 PORT=5000
 GENAI_API_KEY=`AIzaSyBsES2__qGyJQj-biG6Onel9Br1AbhlB3w`
